# serializer version: 1
# name: test_next_states_to_evaluate_no_teammates_in_walking_distance
  list([
    array([0., 0., 0.]),
    array([0.5, 0. , 0. ]),
    array([0.35355339, 0.35355339, 0.78539816]),
    array([3.06161700e-17, 5.00000000e-01, 1.57079633e+00]),
    array([-0.35355339,  0.35355339,  2.35619449]),
    array([-5.00000000e-01,  6.12323400e-17,  3.14159265e+00]),
    array([-0.35355339, -0.35355339, -2.35619449]),
    array([ 3.06161700e-17, -5.00000000e-01, -1.57079633e+00]),
    array([ 0.35355339, -0.35355339, -0.78539816]),
  ])
# ---
# name: test_next_states_to_evaluate_teammates_in_walking_distance
  list([
    array([-0.35355339, -0.35355339, -2.35619449]),
    array([ 3.06161700e-17, -5.00000000e-01, -1.57079633e+00]),
    array([ 0.35355339, -0.35355339, -0.78539816]),
  ])
# ---
